force-app/main/default/objects/Activation_Assignment_Junction__c/Activation_Assignment_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction object between Activation Line and Account Phone Number Assignment.</description>
    <label>Activation Assignment Junction</label>
    <nameField>
        <displayFormat>AAJ-{00000000}</displayFormat>
        <label>Activation Assignment Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activation Assignment Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>