force-app/main/default/objects/Activation_Assignment_Junction__c/fields/Account_Phone_Number_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number_Assignment__c</fullName>
    <label>Account Phone Number Assignment</label>
    <referenceTo>Account_Phone_Number_Assignment__c</referenceTo>
    <relationshipLabel>Related Activation Lines</relationshipLabel>
    <relationshipName>Activation_Assignment_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>