force-app/main/default/objects/Activation_Assignment_Junction__c/fields/Activation_line__c.field-meta.xml
<CustomField>
    <fullName>Activation_line__c</fullName>
    <label>Activation line</label>
    <referenceTo>Activation_line__c</referenceTo>
    <relationshipLabel>Activation Assignment Junctions</relationshipLabel>
    <relationshipName>Activation_Assignment_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>