force-app/main/default/objects/Activation_Assignment_Junction__c/fields/Phone_Number_User__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_User__c</fullName>
    <formula>IF( 
	AND(
		ISBLANK(Activation_line__r.First_name__c),
		ISBLANK(Activation_line__r.Last_name__c)
	), 
	Activation_line__r.Email__c, 
	IF( 
		ISBLANK(Activation_line__r.Email__c), 
		Activation_line__r.First_name__c  + &apos; &apos; + Activation_line__r.Last_name__c, 
		Activation_line__r.First_name__c  + &apos; &apos; + Activation_line__r.Last_name__c + &apos;, &apos;  +  Activation_line__r.Email__c
	) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number User</label>
    <type>Text</type>
</CustomField>