force-app/main/default/objects/Activation_Assignment_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activation_line__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Phone_Number_User__c</columns>
    <columns>Account_Phone_Number_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>